<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_bg"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/m_tab_clr"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/ad_linear"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/toolbar" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <RelativeLayout
                android:id="@+id/img_sec"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:orientation="vertical" >

                <android.support.v4.view.ViewPager
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                </android.support.v4.view.ViewPager>
                <RelativeLayout
                    android:id="@+id/heading_section"
                    android:layout_width="fill_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"

                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/text_palcetitle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:layout_marginLeft="5dp"
                        android:layout_centerVertical="true"
                        android:text="dd"
                        android:textColor="@color/text_white"
                        android:layout_toLeftOf="@+id/imageView3"
                        android:layout_toStartOf="@+id/imageView3" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView4"
                        android:padding="3dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_nextt"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView3"
                        android:padding="3dp"
                        android:src="@drawable/ic_prev"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/imageView4"
                        android:layout_toStartOf="@+id/imageView4" />
                </RelativeLayout>
            </RelativeLayout>



            <android.support.v7.widget.CardView

                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_below="@+id/btnsec"
                android:background="@color/text_white"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardCornerRadius="0dp"
                card_view:cardElevation="4dp"
                android:layout_margin="5dp"
                card_view:cardUseCompatPadding="true"
                card_view:cardPreventCornerOverlap="true">
                <LinearLayout
                    android:id="@+id/descsec"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                     android:orientation="vertical" >
                    <RelativeLayout
                        android:id="@+id/desc"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/btnsec"
                        android:orientation="vertical" >

                        <WebView
                            android:id="@+id/text_description"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:text=""
                            android:paddingBottom="0dp"
                            android:background="@color/text_white"
                            />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/address"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/desc"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageView6"
                            android:layout_marginLeft="7dp"
                            android:src="@drawable/add_map"/>

                        <TextView
                            android:id="@+id/text_address"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text=""
                            android:textSize="16dp"
                            android:layout_gravity="center"
                            android:textColor="@color/text_black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/eamil"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_below="@+id/address"
                        android:orientation="horizontal" >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageView7"
                            android:layout_marginLeft="7dp"
                            android:src="@drawable/add_email"/>
                        <TextView
                            android:id="@+id/text_email"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:textSize="16dp"
                            android:autoLink="email"
                            android:layout_gravity="center"
                            android:text=""
                            android:textColor="@color/text_black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/web"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_below="@+id/eamil"
                        android:orientation="horizontal" >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageView8"
                            android:layout_marginLeft="7dp"
                            android:src="@drawable/ic_web"/>
                        <TextView
                            android:id="@+id/text_web"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:textSize="16dp"
                            android:autoLink="web"
                            android:layout_gravity="center"
                            android:text=""
                            android:textColor="@color/text_black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/phone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/web"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal" >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageView9"
                            android:layout_marginLeft="7dp"
                            android:src="@drawable/ic_call"/>
                        <TextView
                            android:id="@+id/text_phone"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text=""
                            android:autoLink="phone"
                            android:textColor="@color/text_black" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:id="@+id/btnsec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/img_sec">

                <LinearLayout
                    android:layout_width="0dp"
                    android:background="@color/detatl_blue1"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/image_videoplay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="3dp"
                        android:paddingTop="5dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_video" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/watch_video"
                        android:paddingBottom="5dp"
                        android:textColor="@color/text_white"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/detatl_blue2"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/image_fav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="5dp"
                        android:contentDescription="@string/app_name"
                         />

                    <TextView
                        android:id="@+id/textViewfav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingBottom="5dp"
                        android:text="@string/fav"
                        android:textColor="@color/text_white"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/detatl_blue3"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/image_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="5dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_mapp" />

                    <TextView
                        android:id="@+id/textViewmap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingBottom="5dp"
                        android:text="@string/map"
                        android:textColor="@color/text_white"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/detatl_blue4"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/image_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="5dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_share" />

                    <TextView
                        android:id="@+id/textViewshae"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingBottom="5dp"
                        android:text="@string/share"
                        android:textColor="@color/text_white"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ad_linear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_publisher_id" />
    </LinearLayout>

</RelativeLayout>